docs: image description